<resources>
    <string name="app_name">task_management_android</string>
    <string name="delete_task">Delete task</string>
    <string name="add_task">Add Task</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="task_title">Task Title *</string>
    <string name="save_task">Save Task</string>
    <string name="tap_to_add_a_new_task">Tap + to add a new task</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="todo_image_content">TODO</string>
    <string name="tap_to_add_your_first_task">Tap + to add your first task</string>
</resources>